--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './spinner.scss';
+html { overflow-y: scroll; }
 
 .footer{
   text-align: center;
@@ -16,6 +17,9 @@ html, body {
 }
 
 
+a:hover{
+  text-decoration: none;
+}
 .ship {
   min-height: 100%;
   text-align: center;
@@ -103,5 +107,13 @@ h1,h2,h3,h4,h5,h6 {
 @media screen and (max-width: 768px) {
   .row-flex {
     display:block
+  }
+}
+
+span.resource-link{
+  opacity:.2;
+  transition: all ease 0.2s;
+  &.active, &:hover{
+    opacity:1;
   }
 }
