--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,9 @@
 a:hover{
   text-decoration: none;
 }
-#ship {
+#root {
+  position: relative;
+  z-index: 1;
   text-align: center;
   &::after {
     content:'';
